Update HTML files

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
   </head>
   <body>
+    <!--c:header-->
     <!--c:main-->
     <!--c:footer-->
   </body>
