--- a/src/profile.html
+++ b/src/profile.html
@@ -3,9 +3,8 @@
   <component name="head" />
   <body>
     <div id="app" class="pb-16 sm:pb-0 sm:pt-16">
-      <component name="nav" props="-active;;;text-blue-500;;" />
-      <component name="pagetitle" props="Dashboard" />
-      <component name="main" />
+      <component name="nav" props=";;-active;;;text-blue-500" />
+      <component name="pagetitle" props="Profile" />
       <component name="footer" />
     </div>
   </body>
