- started designing the Profile page - created a new component: profile.html file where the with the profile attributes; not finished and needs some adjustments

--- a/src/profile.html
+++ b/src/profile.html
@@ -5,6 +5,7 @@
     <div id="app" class="pb-16 sm:pb-0 sm:pt-16">
       <component name="nav" props=";;-active;;;text-blue-500" />
       <component name="pagetitle" props="Profile" />
+      <component name="profile" />
       <component name="footer" />
     </div>
   </body>
