Add ready function

--- a/src/create-item.html
+++ b/src/create-item.html
@@ -8,7 +8,7 @@
       <component name="form-item-create" />
       <component name="footer" />
       <script>
-        $(document).ready(function () {
+        ready(function () {
           const watchers = [
             {
               identifier: '#title',
@@ -27,6 +27,7 @@
             },
             /* TODO: Add rule for dateToAccomplish */
             /* TODO: Add rule for bucket */
+            /* TODO: Replace rule for image */
             {
               identifier: '#image',
               type: 'text',
