Add scripts to timeline

--- a/src/timeline.html
+++ b/src/timeline.html
@@ -6,6 +6,7 @@
       <component name="nav" props=";-active;;;text-blue-500;" />
       <component name="pagetitle" props="Timeline" />
       <component name="timeline" />
+      <component name="foot" />
     </div>
   </body>
 </html>
