--- a/src/itemCreate.html
+++ b/src/itemCreate.html
@@ -5,10 +5,48 @@
     <div id="app" class="pb-16 sm:pb-0 sm:pt-16">
       <component name="nav" props="-active;;;text-blue-500;;" />
       <component name="pagetitle" props="Create Bucket Item" />
-      <component name="form-item-create" />
+      <form class="max-w-md mx-auto p-4 sm:px-6 lg:px-8">
+        <component name="input-text" props="text;title;Title;;" />
+        <component
+          name="input-text"
+          props="text;description;Description;Describe your bucket item...;Optional"
+        />
+        <component name="input-select" props="bucket;Bucket;" />
+        <component
+          name="input-text"
+          props="date;dateToAccomplish;Date to accomplish;;Optional"
+        />
+        <component name="input-file" props="image;Image;Optional" />
+        <component name="input-text" props="text;labels;Labels;;Optional" />
+        <div class="flex gap-x-3">
+          <component name="button" props="Cancel;" />
+          <component name="button-submit" props="Create;" />
+        </div>
+      </form>
+
       <component name="footer" />
       <script>
-        ready(function () {
+        ready(async function () {
+          try {
+            const buckets = await getBuckets();
+            if (buckets.length > 0) {
+              buckets.sort();
+
+              const select = query('#bucket');
+
+              buckets.forEach((bucket) => {
+                let option = document.createElement('option');
+                option.textContent = bucket.name;
+                option.setAttribute('value', bucket.id);
+                select.appendChild(option);
+              });
+            } else {
+              // TODO: handle error, no buckets exist
+            }
+          } catch (error) {
+            console.log('Could not load buckets: ', error);
+          }
+
           const watchers = [
             {
               identifier: '#title',
@@ -26,7 +64,13 @@
                 'Description has a maximum length of 128 characters long.',
             },
             // TODO: Add rule for dateToAccomplish
-            // TODO: Add rule for bucket
+            {
+              identifier: '#bucket',
+              type: 'text',
+              required: false,
+              regexp: getRegExp('number', 0, 0),
+              message: 'Bucket must be selected.',
+            },
             // TODO: Replace rule for image
             {
               identifier: '#image',
@@ -35,37 +79,82 @@
               regexp: getRegExp('url', 0, 1024),
               message: 'Image must be a valid url.',
             },
+            {
+              identifier: '#labels',
+              type: 'text',
+              required: false,
+              regexp: getRegExp('labels', 0, 0),
+              message: 'Labels must be a space-separated list - dash allowed.',
+            },
           ];
 
           watchValues(watchers, '#submit');
 
-          query('form').addEventListener('submit', (e) => {
+          query('form').addEventListener('submit', async (e) => {
             if (formIsValid()) {
               e.preventDefault();
 
-              postBucketItem(
-                getBucketItemJSON(
-                  null,
-                  val('#title'),
-                  val('#description'),
-                  val('#dateToAccomplish'),
-                  val('#image')
-                ),
-                (result) => {
-                  if (validResult(result)) {
-                    redirect(`/item/view?id=${result.id}`);
+              // TODO: make sure a bucket is selected
+
+              let labelIDs = null;
+              const labelsString = val('#labels').trim();
+
+              if (labelsString !== '') {
+                let labels = labelsString.split(/\s+/);
+                labelIDs = [];
+
+                // create labels and store IDs in labelIDs
+                const allLabels = await getLabels();
+                const allLabelsMap = {};
+
+                allLabels.forEach((label) => {
+                  allLabelsMap[label.name] = label.id;
+                });
+
+                for (const label of labels) {
+                  if (allLabelsMap.hasOwnProperty(label)) {
+                    labelIDs.push(allLabelsMap[label]);
                   } else {
-                    // TODO: implement error reporting
-                    console.log(result);
+                    try {
+                      const result = await postLabel(getLabelJSON(null, label));
+                      labelIDs.push(result.id);
+                    } catch (error) {
+                      console.error(error);
+                      // TODO: implement modal
+                    }
                   }
-                },
-                (error) => {
-                  console.error(error);
-                  // TODO: implement modal
-                  // $('#error-modal').modal('show');
-                  // $('#error-text').text(error);
                 }
+              }
+
+              let image = null;
+
+              if (query('#image').files.length > 0) {
+                const payload = {
+                  image: query('#image').files[0],
+                };
+
+                const result = await postImage(payload);
+                image = result.id;
+              }
+
+              const payload = getBucketItemJSON(
+                null,
+                val('#title'),
+                val('#description'),
+                val('#bucket'),
+                val('#dateToAccomplish'),
+                image,
+                labelIDs
               );
+
+              try {
+                const result = await postBucketItem(payload);
+                console.log(result);
+                // redirect(`/item/view?id=${result.id}`);
+              } catch (error) {
+                console.error(error);
+                // TODO: implement modal
+              }
             }
           });
         });
