--- a/src/timeline.html
+++ b/src/timeline.html
@@ -106,6 +106,11 @@
                       .querySelector(`[data-${rule.key}]`)
                       .classList.add(...rule.classes);
                   }
+
+                  if (rule.src) {
+                    template.content.querySelector(`[data-${rule.key}]`).src =
+                      rule.src;
+                  }
                 });
 
                 const clone = document.importNode(template.content, true);
